components/istio-system-configs/destinationrule-disable-mtls-for-otel-collector.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls-for-otel-collector
  annotations:
    argocd.argoproj.io/sync-wave: '4'
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  host: otel-collector.opentelemetry-collector.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
