components/istio-system-configs/serviceentry-kube-api.yaml
kind: ServiceEntry
apiVersion: networking.istio.io/v1
metadata:
  name: kube-api
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '4'
spec:
  hosts:
  - kubernetes.default.svc.cluster.local
  ports:
  - number: 443
    protocol: HTTPS
    name: https
  resolution: DNS
