components/istio-system-configs/serviceentry-otel-collector.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: otel-collector
  annotations:
    argocd.argoproj.io/sync-wave: '4'
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  hosts:
  - otel-collector.opentelemetry-collector.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
  - number: 4317
    name: otlp-grpc
    protocol: GRPC
  resolution: DNS
