components/istio-system-configs/networkpolicy-istio-istiod-default.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-istiod-default
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istiod
      # istio.io/rev: default-v1-24-3
  ingress:
    - {}
  policyTypes:
    - Ingress
